# d2d_tpm

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
anomaly_detector/: evaluate.py  explain.py  features.py  fnn.py  hybrid.py  wknn.py
bifurcation/: carriers.py  reliability.py  secret_sharing.py  threshold.py
common/: utils.py
configs/: anomaly.yaml  bifurcation.yaml  default.yaml  pqc.yaml  threshold.yaml  tpm.yaml
data_generator/: generate_dataset.py  load_5g_nidd.py
datasets/: telemetry.csv  telemetry_metadata.json
deployment/: Dockerfile.jetson  README.md  docker-compose.yml
deployment/monitoring/: exporter.py  grafana_dashboard.json  prometheus.yml
deployment/power/: nvpmodel_profiles.md  set_power_mode.sh
deployment/tensorrt/: convert_to_tensorrt.py  serve_infer.py
experiments/: _common.py  ablation.py  baselines.py  run_all.py  sweep.py
neural_crypto/: attacks.py  metrics.py  sync.py  tpm.py
paper/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
paper/tables/: baselines.tex  configurations.tex  detector.tex  earlyterm.tex  pqc.tex  (+1 more)
pqc/: __init__.py  hybrid_kdf.py  mlkem.py
results/: ablation.json  ablation_architecture.csv  ablation_early_termination.csv  ablation_feature_groups.csv  baselines.csv  baselines.json  configurations.csv  pqc_benchmark.json  run_all.json  sweep.json  sweep_alpha.csv  sweep_k.csv  sweep_threshold.csv  sweep_tpm_N.csv  tpm_benchmark.json
scripts/: benchmark_pqc.py  benchmark_tpm.py  make_figures.py  make_tables.py  run_pipeline.sh
tests/: test_smoke.py
