[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postquantumedge"
version = "0.1.0"
description = "Post-Quantum Edge Communication: hybrid ML-KEM (FIPS 203) + TPM key establishment, tunable (T,N) multi-carrier secret sharing, and cross-modal ML anomaly detection."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "torch>=2.1",
  "kyber-py>=1.0",
]

[tool.setuptools]
packages = ["neural_crypto", "bifurcation", "anomaly_detector", "common",
            "data_generator", "experiments", "pqc"]

[project.scripts]
pqedge-generate = "data_generator.generate_dataset:main"
pqedge-run-all = "experiments.run_all:main"
pqedge-baselines = "experiments.baselines:main"
